@@ -15,14 +15,18 @@
 	<TR id="voipaccountspanel" style="display: none;">
 		<TD style="width: 100%; " colspan="2">
 			<TABLE class="lmsbox-inner">
+                                <COLGROUP>
+                                        <COL style="width: 96%;">
+                                        <COL style="width: 1%;" span="5">
+                                </COLGROUP>
 				<THEAD>
                                 {block name="customervoipaccountsbox-list-header"}
 				<TR>
-					<TD style="width: 96%;" class="bold nobr">{trans("Login:")}</TD>
-					<TD style="width: 1%;" class="nobr">{trans("ID:")}</TD>
-					<TD style="width: 1%;" class="nobr" colspan="2">{trans("Password:")}</TD>
-					<TD style="width: 1%;" class="nobr">{trans("Phone number:")}</TD>
-					<TD style="width: 1%;">&nbsp;</TD>
+					<TD class="bold nobr">{trans("Login:")}</TD>
+					<TD class="nobr">{trans("ID:")}</TD>
+					<TD class="nobr" colspan="2">{trans("Password:")}</TD>
+					<TD class="nobr">{trans("Phone number:")}</TD>
+					<TD>&nbsp;</TD>
 				</TR>
                                 {/block}
 				</THEAD>
@@ -31,19 +35,19 @@
 				{foreach from=$customervoipaccounts.accounts item=voipaccount}
                                 {block name="customervoipaccountsbox-list-row"}
 				<TR class="highlight {cycle name=voips}"  >
-					<TD style="width: 96%;" class="bold nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
+					<TD class="bold nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
 						{$voipaccount.login}
 					</TD>
-					<TD style="width: 1%;" class="nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
+					<TD class="nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
 						({$voipaccount.id|string_format:"%04d"})
 					</TD>
-					<TD style="width: 1%;" class="nobr" colspan="2" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
+					<TD class="nobr" colspan="2" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
 						{if !ConfigHelper::checkConfig('privileges.hide_voip_passwords')}{$voipaccount.passwd}{else}{'*'|str_repeat:8}{/if}
 					</TD>
-					<TD style="width: 1%;" class="nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
+					<TD class="nobr" onclick="return self.location.href='?m=voipaccountinfo&amp;id={$voipaccount.id}'">
 						{$voipaccount.phone}
 					</TD>
-					<TD style="width: 1%;" class="text-right nobr">
+					<TD class="text-right nobr">
 						<A onClick="return confirmLink(this, '{trans("Are you sure, you want to remove customer voip account?")}')" href="?m=voipaccountdel&amp;id={$voipaccount.id}"><IMG src="img/delete.gif" alt="[ {trans("Delete")} ]" title="[ {trans("Delete")} ]"></A>
 						<A href="?m=voipaccountedit&amp;id={$voipaccount.id}"><IMG src="img/edit.gif" alt="[ {trans("Edit")} ]" title="[ {trans("Edit")} ]"></A>
 						<A href="?m=voipaccountinfo&amp;id={$voipaccount.id}"><IMG src="img/info.gif" alt="[ {trans("Info")} ]" title="[ {trans("Info")} ]"></A>
