@@ -23,6 +23,7 @@ version ?.??.?? (????-??-??):
   - added number_of_table_columns variables at voip account list template that can be used by plugins [maciejlew]
   - added customerlist-list-columns smarty block at customer list template [maciejlew]
   - added number_of_table_columns variables at customer list template [maciejlew]
+  - added colgroup at customer voip account list template [maciejlew]
 
 version 1.11.17 (2015-06-29):
 
